add changeWeights method